# virtual-machine-play

./: CMakeLists.txt  README.md
samples/: add-two-integers.bc
src/assembler/: CMakeLists.txt  assembler.cpp  instruction.cpp
src/include/: definitions.h  loader.h
src/lib/: loader.cpp
src/vm/: CMakeLists.txt  vm.cpp
